fix overflow on comment multiline input

--- a/imports/components/Comments/AddComment/AddComment.css
+++ b/imports/components/Comments/AddComment/AddComment.css
@@ -3,3 +3,7 @@
     font-weight: 600;
     margin: 0;
 }
+
+.input-multiline div {
+    min-height: 17px;
+}
